fix: text align left

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -127,7 +127,7 @@ body,
 	}
 
 	.brand {
-		text-align: center;
+		text-align: left;
 	}
 }
 
